--- a/PraxisBot7/NodeCRUD/package.json
+++ b/PraxisBot7/NodeCRUD/package.json
@@ -14,9 +14,12 @@
     "nodemon": "^1.19.1"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "config": "^3.2.2",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.1.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongoose": "^5.6.9"
